--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <body>
         <header></header>
         <div id="landing">
-        <div class="container">
+        <div class="container prof">
             <div class="name">
             <h1>Martin Mwangi</h1>
             </div>
             <div class="front">
-            <h2>Front End Developer</h2>
+            <h2>Front End Developer || <span class="mobile">UX/UI Designer</span></h2>
             </div>
-            <div class="mobile">
-            <h2>UX/UI Designer</h2>
             </div>
 
+
             </div>
-        </div>
+
 
         <footer></footer>
     </body>
