--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head><title></title>
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/hover.css">
     </head>
     <body>
         <header></header>
