Added animation to some of the content in the landing page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <header></header>
         <div id="landing">
         <div class="container prof">
-            <div class="name">
+            <div class="name bounceInUp animated">
             <h1>Martin Mwangi</h1>
             </div>
             <div class="front">
-            <h2>Front End Developer || <span class="mobile">UX/UI Designer</span></h2>
+            <h2>Front End Developer || <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
             </div>
             </div>
 
