Added font awesome and changed all font and added icons

--- a/index.html
+++ b/index.html
@@ -5,21 +5,38 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hover.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
     </head>
     <body>
         <header></header>
         <div id="landing">
-        <div class="container prof">
-            <div class="name bounceInUp animated">
-            <h1>Martin Mwangi</h1>
-            </div>
-            <div class="front">
-            <h2>Front End Developer || <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
-            </div>
+                <div class="container prof">
+                            <div class="name bounceInUp animated">
+                            <h1>Martin Mwangi</h1>
+                    </div>
+                    <div class="front">
+                            <h2>Front End Developer || <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
+                    </div>
+                    <div class="na">
+                        <i class="fa fa-angle-down fa-5x"></i>
+                    </div>
+                </div>
+        </div>
+        <div id="bio">
+            <div id="container">
+                <h2 class="bio-info">BIO</h2>
+            <p>Hi, my name is Martin Mwangi, passionate about front-end web development and also very interested
+                in creating mobile applications. Anything activity that involves tech am always interested. I also enjoy
+                swimming,tennis, any physical demanding activities and wildlife. <br>
+                Check out my profile Below <i class="fa fa-camera-retro fa-5x thumb"></i>
+
+                </p>
+
             </div>
 
 
-            </div>
+        </div>
 
 
         <footer></footer>
