Added content and styling for the bio section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div id="bio">
             <div id="container">
                 <h2 class="bio-info">BIO</h2>
-            <p>Hi, my name is Martin Mwangi, passionate about front-end web development and also very interested
-                in creating mobile applications. Anything activity that involves tech am always interested. I also enjoy
-                swimming,tennis, any physical demanding activities and wildlife. <br>
-                Check out my profile Below <i class="fa fa-camera-retro fa-5x thumb"></i>
+            <p class="details">Hi, my name is Martin Mwangi, passionate about front-end web development and<br> also very interested
+                in creating mobile applications.<br> Anything activity that involves tech am always interested. I also enjoy
+                swimming,tennis,<br> any physical demanding activities and wildlife. <br>
+                Check out my profile Below <i class="fa fa-hand-o-down fa-3x thumb"></i>
 
                 </p>
 
