Added hover styles and added icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
+    <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
     </head>
     <body>
         <header></header>
@@ -29,7 +30,16 @@
             <p class="details">Hi, my name is Martin Mwangi, passionate about front-end web development and<br> also very interested
                 in creating mobile applications.<br> Anything activity that involves tech am always interested. I also enjoy
                 swimming,tennis,<br> any physical demanding activities and wildlife. <br>
-                Check out my profile Below <i class="fa fa-hand-o-down fa-3x thumb"></i>
+                Check out my profiles Below <i class="fa fa-hand-o-down fa-3x thumb"></i><br>
+                <p class="linkz">
+                <i class="fa fa-google-plus fa-3x maroon hvr-grow-rotate"></i>
+                    <i class="fa fa-github fa-3x hvr-grow-rotate"></i>
+                    <i class="fa fa-linkedin fa-3x blue hvr-grow-rotate"></i>
+                    <i class="fa fa-skype fa-3x hvr-grow-rotate"></i>
+                    <i class="fa fa-twitter fa-3x hvr-grow-rotate"></i>
+
+                </p>
+
 
                 </p>
 
