--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
-    <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
     </head>
     <body>
         <header></header>
@@ -39,16 +37,22 @@
                     <i class="fa fa-twitter fa-3x hvr-grow-rotate"></i>
 
                 </p>
-
-
-                </p>
-
+          </p>
             </div>
+        </div>
+    <div id="skills">
+        <div class="container">
 
 
         </div>
 
+    </div>
+
 
         <footer></footer>
+
+    <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
+    <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     </body>
 </html
