--- a/index.html
+++ b/index.html
@@ -6,7 +6,46 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+ <!--  Script for the bar code in the skills section
+    -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+      google.load("visualization", "1.1", {packages:["bar"]});
+      google.setOnLoadCallback(drawStuff);
+
+      function drawStuff() {
+        var data = new google.visualization.arrayToDataTable([
+          ['Languages', 'Percentage'],
+          ["HTML", 65],
+          ["CSS", 57],
+          ["Javascript", 38],
+          ["Python", 35],
+          ['Java', 25]
+        ]);
+
+        var options = {
+          title: '',
+          width: 900,
+          legend: { position: 'none' },
+          chart: { title: '',
+                   subtitle: '' },
+          bars: 'horizontal', // Required for Material Bar Charts.
+          axes: {
+            x: {
+              0: { side: 'top', label: 'Percentage'} // Top x-axis.
+            }
+          },
+          bar: { groupWidth: "90%" }
+        };
+
+        var chart = new google.charts.Bar(document.getElementById('top_x_div'));
+        chart.draw(data, options);
+      };
+    </script>
+
     </head>
+
     <body>
         <header></header>
         <div id="landing">
@@ -25,8 +64,8 @@
         <div id="bio">
             <div id="container">
                 <h2 class="bio-info">BIO</h2>
-            <p class="details">Hi, my name is Martin Mwangi, passionate about front-end web development and<br> also very interested
-                in creating mobile applications.<br> Anything activity that involves tech am always interested. I also enjoy
+            <p class="details">Hi,call me Mart, passionate about front-end web development and<br> also very interested
+                in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
                 swimming,tennis,<br> any physical demanding activities and wildlife. <br>
                 Check out my profiles Below <i class="fa fa-hand-o-down fa-3x thumb"></i><br>
                 <p class="linkz">
@@ -42,7 +81,8 @@
         </div>
     <div id="skills">
         <div class="container">
-
+            <h3>Skills</h3>
+            <div id="top_x_div" style="width: 900px; height: 500px;"></div>
 
         </div>
 
