--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     </div>
 
-    <div id="portfolio">
+    <!--<div id="portfolio">
         <div class="container">
             <h2>Portfolio</h2>
             <div class="row">
@@ -123,7 +123,42 @@
         </div>
 
     </div>
+-->
+    <div id="contact">
+        <div class="row">
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s6">
+          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+          <label for="first_name">First Name</label>
+        </div>
+        <div class="input-field col s6">
+          <input id="last_name" type="text" class="validate">
+          <label for="last_name">Last Name</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+          <label for="disabled">Disabled</label>
+        </div>
+      </div>
+     <div class="row">
+        <div class="input-field col s12">
+          <input id="email" type="email" class="validate">
+          <label for="email">Email</label>
+        </div>
+      </div>
+        <div class="row">
+        <div class="input-field col s12">
+            <textarea id="textarea1" class="materialize-textarea" length="120"></textarea>
+            <label for="textarea1">Textarea</label>
+    </div>
+       </form>
+  </div>
 
+
+    </div>
 
         <footer></footer>
 
