--- a/index.html
+++ b/index.html
@@ -10,39 +10,7 @@
  <!--  Script for the bar code in the skills section
     -->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript">
-      google.load("visualization", "1.1", {packages:["bar"]});
-      google.setOnLoadCallback(drawStuff);
 
-      function drawStuff() {
-        var data = new google.visualization.arrayToDataTable([
-          ['Languages', 'Percentage'],
-          ["HTML", 65],
-          ["CSS", 57],
-          ["Javascript", 38],
-          ["Python", 35],
-          ['Java', 25]
-        ]);
-
-        var options = {
-          title: '',
-          width: 900,
-          legend: { position: 'none' },
-          chart: { title: '',
-                   subtitle: '' },
-          bars: 'horizontal', // Required for Material Bar Charts.
-          axes: {
-            x: {
-              0: { side: 'top', label: 'Percentage'} // Top x-axis.
-            }
-          },
-          bar: { groupWidth: "90%" }
-        };
-
-        var chart = new google.charts.Bar(document.getElementById('top_x_div'));
-        chart.draw(data, options);
-      };
-    </script>
 
     </head>
 
@@ -67,7 +35,7 @@
             <p class="details">Hi,call me Mart, passionate about front-end web development and<br> also very interested
                 in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
                 swimming,tennis,<br> any physical demanding activities and wildlife. <br>
-                Check out my profiles Below <i class="fa fa-hand-o-down fa-3x thumb"></i><br>
+                Check out my profiles <i class="fa fa-hand-o-down fa-1x thumb"></i><br>
                 <p class="linkz">
                 <i class="fa fa-google-plus fa-3x maroon hvr-grow-rotate"></i>
                     <i class="fa fa-github fa-3x hvr-grow-rotate"></i>
