Added link for external js file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <!--  Script for the bar code in the skills section
     -->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-
+     <script type="text/javascript" src="js/script.js"></script>
 
     </head>
 
@@ -35,7 +35,7 @@
             <p class="details">Hi,call me Mart, passionate about front-end web development and<br> also very interested
                 in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
                 swimming,tennis,<br> any physical demanding activities and wildlife. <br>
-                Check out my profiles <i class="fa fa-hand-o-down fa-1x thumb"></i><br>
+                Check out my profiles <i class="fa fa-hand-o-down fa-2x thumb"></i><br>
                 <p class="linkz">
                 <i class="fa fa-google-plus fa-3x maroon hvr-grow-rotate"></i>
                     <i class="fa fa-github fa-3x hvr-grow-rotate"></i>
