--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="col s2"></div>
                 <div class="col s4">
                     <div class="card">
-            <div class="card-content ">
+            <div class="card-cont">ent ">
               <span class="card-title">Yolomy</span>
          <img src="images/yolomy.png">
                 <div class="card-action">
@@ -93,6 +93,8 @@
     </div>
 -->
     <div id="contact">
+        <div class="container">
+                    <h3>Drop me a line<i class="fa fa-envelope"></i></h3>
         <div class="row">
     <form class="col s12">
       <div class="row">
@@ -115,12 +117,12 @@
         <div class="row">
         <div class="input-field col s5">
             <textarea id="textarea1" class="materialize-textarea" length="120"></textarea>
-            <label for="textarea1">Textarea</label>
+            <label for="textarea1">Message</label>
     </div>
        </form>
   </div>
 
-
+            </div>
     </div>
 
         <footer></footer>
