Disabled hidden view

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <label for="textarea1">Message</label>
     </div>
             <input type="submit" value="send">
-            <input type="hidden" name="_next" value="//martmwangi.github.io/contact" />
+           <!-- <input type="hidden" name="_next" value="//martmwangi.github.io/contact" />-->
             <input type="hidden" name="_subject" value="Website contact" />
        </form>
   </div>
