Fixed form bug for not sending message

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
         <div class="row">
         <div class="input-field col s5">
-            <textarea id="textarea1" class="materialize-textarea" length="120"></textarea>
+            <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
             <label for="textarea1">Message</label>
     </div>
             <input type="submit" value="send">
