--- a/index.html
+++ b/index.html
@@ -99,25 +99,25 @@
     <form action="//formspree.io/martmwangi86@gmail.com" method="POST" class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input placeholder="Placeholder" id="first_name" name="name" type="text" class="validate">
-          <label for="first_name">First Name</label>
+          <input  id="first_name" name="name" type="text" class="validate">
+
         </div>
         <div class="input-field col s6">
           <input id="last_name" type="text" class="validate">
-          <label for="last_name">Last Name</label>
+
         </div>
       </div>
 
      <div class="row">
         <div class="input-field col s5">
           <input id="email" type="email" name="_replyto" class="validate">
-          <label for="email">Email</label>
+
         </div>
       </div>
         <div class="row">
         <div class="input-field col s5">
             <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
-            <label for="textarea1">Message</label>
+
     </div>
             <input type="submit" value="send">
            <!-- <input type="hidden" name="_next" value="//martmwangi.github.io/contact" />-->
