--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@
     <form action="//formspree.io/martmwangi86@gmail.com" method="POST" class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input  id="first_name" name="name" type="text" class="validate">
+          <input  id="first_name" placeholder="first_name" name="name" type="text" class="validate">
 
         </div>
         <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
+          <input id="last_name" type="text" placehoder="last name" class="validate">
 
         </div>
       </div>
 
      <div class="row">
         <div class="input-field col s5">
-          <input id="email" type="email" name="_replyto" class="validate">
+          <input id="email" type="email" placeholder="email" name="_replyto" class="validate">
 
         </div>
       </div>
         <div class="row">
         <div class="input-field col s5">
-            <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
+            <textarea id="textarea1" class="materialize-textarea" placeholder="message" length="120" name="message"></textarea>
 
     </div>
             <input type="submit" value="send">
