Changed form to reload upon  submission fixed bug on labels

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="row">
         <div class="input-field col s6">
 
-          <input  id="first_name" placeholder="first_name" name="name" type="text" class="validate">
+          Name: <input  id="name"  name="name" type="text" class="validate">
 
         </div>
 
@@ -108,17 +108,17 @@
 
      <div class="row">
         <div class="input-field col s5">
-          <input id="email" type="email" placeholder="email" name="_replyto" class="validate">
+          Email: <input id="email" type="email"  name="_replyto" class="validate">
 
         </div>
       </div>
         <div class="row">
         <div class="input-field col s5">
-            <textarea id="textarea1" class="materialize-textarea" placeholder="message" length="120" name="message"></textarea>
+            Message: <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
 
     </div>
             <input type="submit" value="send">
-           <!-- <input type="hidden" name="_next" value="//martmwangi.github.io/contact" />-->
+           <input type="hidden" name="_next" value="http://martmwangi.github.io/contact" />
             <input type="hidden" name="_subject" value="Website contact" />
        </form>
   </div>
