--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="row">
         <div class="input-field col s6">
 
-          Name: <input  id="name"  name="name" type="text" class="validate">
+          Name: <input  id="name"  name="name" length="120" type="text" class="validate">
 
         </div>
 
@@ -108,7 +108,7 @@
 
      <div class="row">
         <div class="input-field col s5">
-          Email: <input id="email" type="email"  name="_replyto" class="validate">
+          Email: <input id="email" type="email" length="120"  name="_replyto" class="validate">
 
         </div>
       </div>
@@ -117,7 +117,9 @@
             Message: <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
 
     </div>
-            <input type="submit" value="send">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button>
            <input type="hidden" name="_next" value="http://martmwangi.github.io/contact" />
             <input type="hidden" name="_subject" value="Website contact" />
        </form>
