--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     </div>
             <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
+    <i class="material-icons right"></i>
   </button>
            <input type="hidden" name="_next" value="http://martmwangi.github.io/contact" />
             <input type="hidden" name="_subject" value="Website contact" />
