Testing functionality of the contact form

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <button class="btn waves-effect waves-light" type="submit" name="action">Submit
     <i class="material-icons right"></i>
   </button>
-           <input type="hidden" name="_next" value="http://martmwangi.github.io/contact" />
+           <input type="hidden" name="_next" value="http://martmwangi.github.io" />
             <input type="hidden" name="_subject" value="Website contact" />
        </form>
   </div>
