--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <h2>Front End Developer || <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
                     </div>
                     <div class="na">
-                       <a href="#bio"><i class="fa fa-angle-down fa-5x"></i></a>
+                       <a href="#bio"><i class="fa fa-angle-down fa-5x hvr-grow"></i></a>
                     </div>
                 </div>
         </div>
