Added images to the portfolio section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <h2>Front End Developer || <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
                     </div>
                     <div class="na">
-                       <a href="#bio"><i class="fa fa-angle-down fa-5x hvr-grow"></i></a>
+                       <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x hvr-grow"></i></a>
                     </div>
                 </div>
         </div>
@@ -55,6 +55,27 @@
         </div>
 
     </div>
+<div id="portfolio">
+    <div class="container">
+        <div class="row">
+            <div class=" col col-md-4">
+                <img src="images/fred.png" class="img-responsive" height="300px" width="400px">
+
+            </div>
+             <div class="col col-md-4 ">
+                 <img src="images/gnome.png" class="img-responsive" height="300px" width="400px">
+                </div>
+             <div class="col col-md-4">
+                <img src="images/single.png" class="img-responsive" height="300px" width="400px">
+                </div>
+
+
+
+        </div>
+    </div>
+
+    </div>
+
 
     <!--<div id="portfolio">
         <div class="container">
@@ -130,7 +151,8 @@
 
         <footer></footer>
         <!--smoot scroll-->
-<script type="text/javascript">$(function() {
+<script type="text/javascript">
+$(function() {
   $('a[href*=#]:not([href=#])').click(function() {
     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
       var target = $(this.hash);
@@ -143,10 +165,14 @@
       }
     }
   });
-});</script>
+});
+</script>
+
 
     <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
     <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.js"></script>
+        <script src="js/jquery.smooth-scroll.min.js"></script>
     </body>
-</html
+</html>
