Set up the grid system for the portfolio section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <h2>Front End Developer || <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
                     </div>
                     <div class="na">
-                       <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x hvr-grow"></i></a>
+                       <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x fax hvr-grow"></i></a>
                     </div>
                 </div>
         </div>
@@ -37,11 +37,10 @@
                 swimming,tennis,<br> any physical demanding activities and wildlife. <br>
                 Check out my profiles <i class="fa fa-hand-o-down fa-2x thumb"></i><br>
                 <p class="linkz">
-                <i class="fa fa-google-plus fa-3x maroon hvr-grow-rotate"></i>
-                    <i class="fa fa-github fa-3x hvr-grow-rotate"></i>
-                    <i class="fa fa-linkedin fa-3x blue hvr-grow-rotate"></i>
-                    <i class="fa fa-skype fa-3x hvr-grow-rotate"></i>
-                    <i class="fa fa-twitter fa-3x hvr-grow-rotate"></i>
+                <i class="fa fa-google-plus fa-3x maroon hvr-grow-rotate"><a href="https://plus.google.com/+MartMwangi86"></a></i>
+                    <i class="fa fa-github fa-3x hvr-grow-rotate"><a href="https://github.com/martmwangi"></a></i>
+                    <i class="fa fa-linkedin fa-3x blue hvr-grow-rotate"><a href="https://ke.linkedin.com/pub/martin-kariuki/99/476/108"></a></i>
+                    <i class="fa fa-twitter fa-3x hvr-grow-rotate"><a href="https://www.twitter.com/luthermwangi"></a></i>
 
                 </p>
           </p>
@@ -58,15 +57,15 @@
 <div id="portfolio">
     <div class="container">
         <div class="row">
-            <div class=" col col-md-4">
-                <img src="images/fred.png" class="img-responsive" height="300px" width="400px">
+            <div class=" col s4">
+                <img src="images/single.png"  height="300px" width="400px">
 
             </div>
-             <div class="col col-md-4 ">
-                 <img src="images/gnome.png" class="img-responsive" height="300px" width="400px">
+             <div class="col s4 ">
+                 <img src="images/gnome.png"  height="300px" width="400px">
                 </div>
-             <div class="col col-md-4">
-                <img src="images/single.png" class="img-responsive" height="300px" width="400px">
+             <div class="col s4">
+                <img src="images/fred.png"  height="300px" width="400px">
                 </div>
 
 
