--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           </p>
             </div>
         </div>
+    <div id="fuji">
+
+    </div>
     <div id="skills">
         <div class="container">
             <h3>Skills</h3>
