Added interest section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
     <div id="fuji">
 
     </div>
+    <div id="interests">
+        <div class="row">
+        <div class="container">
+            <h1 class="int">INTERESTS</h1>
+            <div class="col s6">
+                <ul class="collection with-header">
+                            <li class="collection-header"><h4>FrontEnd</h4></li>
+                            <li class="collection-item">Frameworks</li>
+                            <li class="collection-item">Design</li>
+                            <li class="collection-item">UX</li>
+              </ul>
+
+            </div>
+            <div class="col s6">
+                <ul class="collection with-header">
+                            <li class="collection-header"><h4>BackEnd</h4></li>
+                            <li class="collection-item">Python</li>
+                            <li class="collection-item">Django</li>
+              </ul>
+            </div>
+
+            </div>
+        </div>
+
+    </div>
     <div id="skills">
         <div class="container">
             <h3>Skills</h3>
