--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     </div>
 <div id="portfolio">
     <div class="container">
+        <h1 class="int">Portfolio</h1>
         <div class="row">
             <div class=" col s4">
                 <img src="images/single.png"  height="300px" width="400px">
@@ -103,43 +104,6 @@
 
     </div>
 
-
-    <!--<div id="portfolio">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <div class="row">
-                <div class="col s2"></div>
-                <div class="col s4">
-                    <div class="card">
-            <div class="card-cont">ent ">
-              <span class="card-title">Yolomy</span>
-         <img src="images/yolomy.png">
-                <div class="card-action">
-             <p>Yolomy clothing website</p>
-            </div>
-            </div>
-
-
-
-                </div>
-                <div class="col s4">
-                    <div class="card">
-            <div class="card-content ">
-              <span class="card-title">SinglePro</span>
-         <img src="images/single.png">
-                <div class="card-action">
-             <p>Landing page</p>
-            </div>
-
-                    </div>
-                <div class="col s2"></div>
-
-            </div>
-
-        </div>
-
-    </div>
--->
     <div id="contact">
         <div class="container">
                     <h3>Drop me a line<i class="fa fa-envelope"></i></h3>
