--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header></header>
         <div id="landing">
                 <div class="container prof">
-                            <div class="name bounceInUp animated">
+                            <div class="name bounceInUp animated delay=23sec">
                             <h1>Martin Mwangi</h1>
                     </div>
                     <div class="front">
@@ -156,7 +156,7 @@ function setBindings(){
 
 </script>
 
-
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
     <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
