Set margin for the portofolio part

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
     <div class="container">
         <h1 class="int">Portfolio</h1>
         <div class="row">
-            <div class=" col s4">
+            <div class=" speed col s4">
                 <img src="images/single.png"  height="300px" width="400px">
 
             </div>
-             <div class="col s4 ">
+             <div class="speed col s4 ">
                  <img src="images/gnome.png"  height="300px" width="400px">
                 </div>
-             <div class="col s4">
+             <div class="speed col s4">
                 <img src="images/fred.png"  height="300px" width="400px">
                 </div>
 
