Changed margins and added ico

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<!--    For the favicon-->
+     <link rel="icon" href="/images/favicon.ico">
 
  <!--  Script for the bar code in the skills section
     -->
@@ -22,7 +24,7 @@
                             <h1>Martin Mwangi</h1>
                     </div>
                     <div class="front">
-                            <h2>Front End Developer || <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
+                            <h2>Front End Developer || M <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
                     </div>
                     <div class="na">
                        <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x fax hvr-grow"></i></a>
