updates for twitter follow button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                             <h1>Martin Mwangi</h1>
                     </div>
                     <div class="front">
-                            <h2>Front End Developer || M <span class="mobile bounceInRight animated">UX/UI Designer</span></h2>
+                            <h2>Front End Developer || <span class="mobile bounceInRight animated">Mobile Developer</span></h2>
+                        <a href="https://twitter.com/luthermwangi" class="twitter-follow-button" data-show-count="false">Follow @luthermwangi</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </div>
                     <div class="na">
                        <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x fax hvr-grow"></i></a>
