--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                     </div>
                     <div class="front">
                             <h2>Front End Developer || <span class="mobile bounceInRight animated">Mobile Developer</span></h2>
-                        <a href="https://twitter.com/luthermwangi" class="twitter-follow-button" data-show-count="false">Follow @luthermwangi</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
                     </div>
                     <div class="na">
                        <a href="#bio"><i id="hy" class="fa fa-angle-down fa-5x fax hvr-grow"></i></a>
@@ -144,19 +143,24 @@
             </div>
     </div>
 
-        <footer></footer>
-        <!--smoot scroll-->
-<script type="text/javascript">
-$(function() {
-$(document).ready(function()){
-          setBindings();
-});
-function setBindings(){
-    $("nav a").click(function(e){
-        var sectionID = e.currentTarget.id + "section";
-        alert('button id' + sectionID);
-    })
-}
+        <footer>
+        <div class="row">
+            <div class="container">
+                <h3>Follow me</h3>
+                <div class="col s4">
+                    <a href="https://twitter.com/luthermwangi" class="twitter-follow-button" data-show-count="false">Follow @luthermwangi</a>
+
+                </div>
+                <div class="col s4">
+                <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/ntkme" data-style="mega" data-count-href="/martmwangi/followers" data-count-api="/users/martmwangi#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @martmwangi on GitHub">Follow @martmwangi</a>
+                </div>
+                <div class="col s4"></div>
+                <div class="col s4"></div>
+            </div>
+            </div>
+        </footer>
+
 
 </script>
 
@@ -164,6 +168,7 @@ function setBindings(){
     <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
     <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script>
         $('a[href*=#]:not([href=#])').click(function() {
     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
