Added google+ button

--- a/index.html
+++ b/index.html
@@ -146,14 +146,21 @@
         <footer>
         <div class="row">
             <div class="container">
-                <h3>Follow me</h3>
+                <p class="white">Follow me</p>
                 <div class="col s4">
+<!--                    Twitter-->
                     <a href="https://twitter.com/luthermwangi" class="twitter-follow-button" data-show-count="false">Follow @luthermwangi</a>
+<!--                    Github-->
+                      <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/martmwangi" data-style="mega" data-count-href="/martmwangi/followers" data-count-api="/users/martmwangi#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @martmwangi on GitHub">Follow @martmwangi</a>
+
+<!--                    Google +-->
+
+<g:follow href="https://plus.google.com/martmwangi" rel="{relationshipType}"></g:follow>
 
                 </div>
                 <div class="col s4">
-                <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/ntkme" data-style="mega" data-count-href="/martmwangi/followers" data-count-api="/users/martmwangi#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @martmwangi on GitHub">Follow @martmwangi</a>
+
                 </div>
                 <div class="col s4"></div>
                 <div class="col s4"></div>
@@ -169,6 +176,7 @@
     <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script>
         $('a[href*=#]:not([href=#])').click(function() {
     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
