--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 <!--    For the favicon-->
      <link rel="icon" href="/images/favicon.ico">
 
@@ -107,9 +113,60 @@
 
     </div>
 
+    <div id="toole">
+    <div class="container">
+        <h5>Send me a message</h5>
+               <form action="//formspree.io/martmwangi86@gmail.com" method="POST">
+              <input type='hidden' name='form-name' value='form 1' />
+                   <div class="row">
+                      <div class="input-field col s6">
+                      </div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">account_circle</i>
+                        <input  id="name"  name="name" length="120" type="text" class="validate">
+                         <label for="first_name">Full Name</label>
+                    </div>
+                   </div>
+                   <div class="row">
+                       <input type='hidden' name='form-email' value='form 1' />
+                        <div class="input-field col s6">
+                      </div>
+                            <div class="input-field">
+                                <i class="material-icons prefix">email</i>
+                                 <input id="email" type="email" length="120"  name="_replyto" class="validate">
+                                 <label for="email">Email</label>
+                            </div>
+                    </div>
+                   <div class="row">
+                       <div class="input-field col s6"></div>
+                            <div class="input-field">
+                                <i class="material-icons prefix">message</i>
+                                <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
+                                <label for="textarea1">Message</label>
+                            </div>
+                        </div>
+                   </div>
+        <div class="row">
+            <div class="container">
+                <div class="col s12">
+                      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right"></i>
+                      </button>
+              <!-- <input type="hidden" name="_next" value="http://martmwangi.github.io" />-->
+                <input type="hidden" name="_subject" value="Website contact" />
+                </div>
+            </div>
+        </div>
+
+
+                </form>
+            </div>
+    </div>
+
+<!--
     <div id="contact">
         <div class="container">
-                    <h3>Drop me a line<i class="fa fa-envelope"></i></h3>
+                    <h3>Drop me a line</h3>
         <div class="row">
     <form action="//formspree.io/martmwangi86@gmail.com" method="POST" class="col s12">
       <div class="row">
@@ -135,13 +192,14 @@
             <button class="btn waves-effect waves-light" type="submit" name="action">Submit
     <i class="material-icons right"></i>
   </button>
-          <!-- <input type="hidden" name="_next" value="http://martmwangi.github.io" />-->
+           <input type="hidden" name="_next" value="http://martmwangi.github.io" />
             <input type="hidden" name="_subject" value="Website contact" />
        </form>
   </div>
 
             </div>
     </div>
+-->
 
         <footer>
         <div class="row">
@@ -177,6 +235,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
     <script>
         $('a[href*=#]:not([href=#])').click(function() {
     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
