--- a/index.html
+++ b/index.html
@@ -58,39 +58,8 @@
     <div id="fuji">
 
     </div>
-    <div id="interests">
-        <div class="row">
-        <div class="container">
-            <h1 class="int">INTERESTS</h1>
-            <div class="col s6">
-                <ul class="collection with-header">
-                            <li class="collection-header"><h4>FrontEnd</h4></li>
-                            <li class="collection-item">Frameworks</li>
-                            <li class="collection-item">Design</li>
-                            <li class="collection-item">UX</li>
-              </ul>
 
-            </div>
-            <div class="col s6">
-                <ul class="collection with-header">
-                            <li class="collection-header"><h4>BackEnd</h4></li>
-                            <li class="collection-item">Python</li>
-                            <li class="collection-item">Django</li>
-              </ul>
-            </div>
 
-            </div>
-        </div>
-
-    </div>
-    <div id="skills">
-        <div class="container">
-            <h3>Skills</h3>
-            <div id="top_x_div" style="width: 900px; height: 500px;"></div>
-
-        </div>
-
-    </div>
 <div id="portfolio">
     <div class="container">
         <h1 class="int">Portfolio</h1>
@@ -152,7 +121,7 @@
                       <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                         <i class="material-icons right"></i>
                       </button>
-              <!-- <input type="hidden" name="_next" value="http://martmwangi.github.io" />-->
+              <input type="hidden" name="_next" value="//martmwangi.github.io" />
                 <input type="hidden" name="_subject" value="Website contact" />
                 </div>
             </div>
@@ -208,19 +177,22 @@
                 <div class="col s4">
 <!--                    Twitter-->
                     <a href="https://twitter.com/luthermwangi" class="twitter-follow-button" data-show-count="false">Follow @luthermwangi</a>
-<!--                    Github-->
-                      <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/martmwangi" data-style="mega" data-count-href="/martmwangi/followers" data-count-api="/users/martmwangi#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @martmwangi on GitHub">Follow @martmwangi</a>
 
-<!--                    Google +-->
 
-<g:follow href="https://plus.google.com/martmwangi" rel="{relationshipType}"></g:follow>
 
                 </div>
                 <div class="col s4">
+<!--                     Github-->
+                      <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/martmwangi" data-style="mega" data-count-href="/martmwangi/followers" data-count-api="/users/martmwangi#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @martmwangi on GitHub">Follow @martmwangi</a>
+
 
                 </div>
-                <div class="col s4"></div>
+                <div class="col s4">
+                    <!--                    Google +-->
+
+<g:follow href="https://plus.google.com/martmwangi" rel="{relationshipType}"></g:follow>
+                </div>
                 <div class="col s4"></div>
             </div>
             </div>
