--- a/index.html
+++ b/index.html
@@ -39,47 +39,34 @@
                 </div>
         </div>
         <div id="bio">
-            <div id="container">
+            <div class="container">
                 <h2 class="bio-info">BIO</h2>
-            <p class="details">Hi,call me Mart, passionate about front-end web development and<br> also very interested
+            <p class="details">Hi,call me Mart, passionate about front-end web development and<br> also very passionate
                 in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
-                swimming,tennis,<br> any physical demanding activities and wildlife. <br>
-                Check out my profiles <i class="fa fa-hand-o-down fa-2x thumb"></i><br>
-                <p class="linkz">
-                <i class="fa fa-google-plus fa-3x maroon hvr-grow-rotate"><a href="https://plus.google.com/+MartMwangi86"></a></i>
-                    <i class="fa fa-github fa-3x hvr-grow-rotate"><a href="https://github.com/martmwangi"></a></i>
-                    <i class="fa fa-linkedin fa-3x blue hvr-grow-rotate"><a href="https://ke.linkedin.com/pub/martin-kariuki/99/476/108"></a></i>
-                    <i class="fa fa-twitter fa-3x hvr-grow-rotate"><a href="https://www.twitter.com/luthermwangi"></a></i>
+                swimming,tennis,<br> and wildlife. <br>
 
-                </p>
-          </p>
             </div>
         </div>
-    <div id="fuji">
-
-    </div>
-
-
+<!--        For the parallax effect-->
+    <div id="fuji"></div>
+<!--        Portfolio section-->
 <div id="portfolio">
-    <div class="container">
         <h1 class="int">Portfolio</h1>
-        <div class="row">
-            <div class=" speed col s4">
-                <img src="images/single.png"  height="300px" width="400px">
-
+    <div class="row">
+        <div class = "container">
+            <div class="col s5">
+                <img src="images/single.png" height="300px" width="400px">
             </div>
-             <div class="speed col s4 ">
-                 <img src="images/gnome.png"  height="300px" width="400px">
-                </div>
-             <div class="speed col s4">
-                <img src="images/fred.png"  height="300px" width="400px">
-                </div>
-
-
-
         </div>
+        <div class="col s2">
+        <div class="container"></div>
+        </div>
+        <div class="col s5 ">
+            <div class="container">
+                <img src="images/gnome.png" height="300px" width="400px">
+            </div>
+         </div>
     </div>
-
     </div>
 
     <div id="toole">
