--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     <div class="row">
         <div class = "container">
             <div class="col s5">
-                <img src="images/single.png" height="300px" width="400px">
+                <a href="https://www.bitballoon.com/sites/yolomy254" target="_blank">
+                <img src="images/yolomy.png" height="300px" width="400px">
+                </a>
             </div>
         </div>
         <div class="col s2">
@@ -63,7 +65,9 @@
         </div>
         <div class="col s5 ">
             <div class="container">
+                <a href="http://gnome254.bitballoon.com/" target="_blank">
                 <img src="images/gnome.png" height="300px" width="400px">
+                </a>
             </div>
          </div>
     </div>
