Fixed bug on portfolio

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col s5 ">
             <div class="container">
-                <a href="http://gnome254.bitballoon.com/" target="_blank">
+                <a href="http://yolomy254.bitballoon.com/" target="_blank">
                 <img src="images/gnome.png" height="300px" width="400px">
                 </a>
             </div>
