Few last changes and inserting modulo

--- a/index.html
+++ b/index.html
@@ -75,53 +75,57 @@
 
     <div id="toole">
     <div class="container">
+        <div class="row">
         <h5>Send me a message</h5>
-               <form action="//formspree.io/martmwangi86@gmail.com" method="POST">
+
+               <form class="col s12" action="//formspree.io/martmwangi86@gmail.com" method="POST">
               <input type='hidden' name='form-name' value='form 1' />
                    <div class="row">
-                      <div class="input-field col s6">
-                      </div>
-                    <div class="input-field">
+                      <div class="input-field col s6"></div>
+                       <div class="input-field container">
                         <i class="material-icons prefix">account_circle</i>
                         <input  id="name"  name="name" length="120" type="text" class="validate">
-                         <label for="first_name">Full Name</label>
+                         <label for="first_name" data-error="wrong" data-success="right">Full Name</label>
                     </div>
                    </div>
                    <div class="row">
                        <input type='hidden' name='form-email' value='form 1' />
                         <div class="input-field col s6">
                       </div>
-                            <div class="input-field">
+                            <div class="input-field container">
                                 <i class="material-icons prefix">email</i>
                                  <input id="email" type="email" length="120"  name="_replyto" class="validate">
-                                 <label for="email">Email</label>
+                                 <label for="email" data-error="wrong" data-success="right">Email</label>
                             </div>
                     </div>
                    <div class="row">
                        <div class="input-field col s6"></div>
-                            <div class="input-field">
+                            <div class="input-field container">
                                 <i class="material-icons prefix">message</i>
-                                <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
+                                <textarea id="textarea1" class="materialize-textarea" length="120" name="message">
+                                </textarea>
                                 <label for="textarea1">Message</label>
                             </div>
                         </div>
-                   </div>
-        <div class="row">
-            <div class="container">
-                <div class="col s12">
-                      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+
+
+                </form>
+            </div>
+        </div>
+<!--        Previous button-->
+<!--
+          <div class="row">
+
+                <div class="col s12 container">
+                      <button class="btn waves-effect waves-light container" type="submit" name="action">Submit
                         <i class="material-icons right"></i>
                       </button>
               <input type="hidden" name="_next" value="//martmwangi.github.io" />
                 <input type="hidden" name="_subject" value="Website contact" />
                 </div>
-            </div>
         </div>
 
-
-                </form>
-            </div>
-    </div>
+-->
 
 <!--
     <div id="contact">
