Added card to bio

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <body>
         <header></header>
+        <div class="loader">Loading...</div>
         <div id="landing">
                 <div class="container prof">
                             <div class="name bounceInUp animated delay=23sec">
@@ -40,161 +41,28 @@
         </div>
         <div id="bio">
             <div class="container">
-                <h2 class="bio-info">BIO</h2>
-            <p class="details">Hi,call me Mart, passionate about front-end web development and<br> also very passionate
+            <div class="row">
+                <div class="col s12">
+                    <div class="card">
+
+                        <div class="card-content">
+                            <span class="card-title">Bio</span>
+                            Hi,call me Mart, passionate about front-end web development and<br> also very passionate
                 in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
                 swimming,tennis,<br> and wildlife. <br>
 
-            </div>
-        </div>
-<!--        For the parallax effect-->
-    <div id="fuji"></div>
-<!--        Portfolio section-->
-<div id="portfolio">
-        <h1 class="int">Portfolio</h1>
-    <div class="row">
-        <div class = "container">
-            <div class="col s5">
-                <a href="https://www.bitballoon.com/sites/yolomy254" target="_blank">
-                <img src="images/yolomy.png" height="300px" width="400px">
-                </a>
-            </div>
-        </div>
-        <div class="col s2">
-        <div class="container"></div>
-        </div>
-        <div class="col s5 ">
-            <div class="container">
-                <a href="http://yolomy254.bitballoon.com/" target="_blank">
-                <img src="images/gnome.png" height="300px" width="400px">
-                </a>
-            </div>
-         </div>
-    </div>
-    </div>
-
-    <div id="toole">
-    <div class="container">
-        <div class="row">
-        <h5>Send me a message</h5>
-
-               <form class="col s12" action="//formspree.io/martmwangi86@gmail.com" method="POST">
-              <input type='hidden' name='form-name' value='form 1' />
-                   <div class="row">
-                      <div class="input-field col s6"></div>
-                       <div class="input-field container">
-                        <i class="material-icons prefix">account_circle</i>
-                        <input  id="name"  name="name" length="120" type="text" class="validate">
-                         <label for="first_name" data-error="wrong" data-success="right">Full Name</label>
-                    </div>
-                   </div>
-                   <div class="row">
-                       <input type='hidden' name='form-email' value='form 1' />
-                        <div class="input-field col s6">
-                      </div>
-                            <div class="input-field container">
-                                <i class="material-icons prefix">email</i>
-                                 <input id="email" type="email" length="120"  name="_replyto" class="validate">
-                                 <label for="email" data-error="wrong" data-success="right">Email</label>
-                            </div>
-                    </div>
-                   <div class="row">
-                       <div class="input-field col s6"></div>
-                            <div class="input-field container">
-                                <i class="material-icons prefix">message</i>
-                                <textarea id="textarea1" class="materialize-textarea" length="120" name="message">
-                                </textarea>
-                                <label for="textarea1">Message</label>
-                            </div>
                         </div>
 
-
-                </form>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
-<!--        Previous button-->
-<!--
-          <div class="row">
-
-                <div class="col s12 container">
-                      <button class="btn waves-effect waves-light container" type="submit" name="action">Submit
-                        <i class="material-icons right"></i>
-                      </button>
-              <input type="hidden" name="_next" value="//martmwangi.github.io" />
-                <input type="hidden" name="_subject" value="Website contact" />
-                </div>
-        </div>
-
--->
-
-<!--
-    <div id="contact">
-        <div class="container">
-                    <h3>Drop me a line</h3>
-        <div class="row">
-    <form action="//formspree.io/martmwangi86@gmail.com" method="POST" class="col s12">
-      <div class="row">
-        <div class="input-field col s6">
-
-          Name: <input  id="name"  name="name" length="120" type="text" class="validate">
-
-        </div>
-
-      </div>
-
-     <div class="row">
-        <div class="input-field col s5">
-          Email: <input id="email" type="email" length="120"  name="_replyto" class="validate">
-
-        </div>
-      </div>
-        <div class="row">
-        <div class="input-field col s5">
-            Message: <textarea id="textarea1" class="materialize-textarea" length="120" name="message"></textarea>
-
-    </div>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right"></i>
-  </button>
-           <input type="hidden" name="_next" value="http://martmwangi.github.io" />
-            <input type="hidden" name="_subject" value="Website contact" />
-       </form>
-  </div>
-
-            </div>
-    </div>
--->
-
-        <footer>
-        <div class="row">
-            <div class="container">
-                <p class="white">Follow me</p>
-                <div class="col s4">
-<!--                    Twitter-->
-                    <a href="https://twitter.com/luthermwangi" class="twitter-follow-button" data-show-count="false">Follow @luthermwangi</a>
 
 
 
-                </div>
-                <div class="col s4">
-<!--                     Github-->
-                      <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/martmwangi" data-style="mega" data-count-href="/martmwangi/followers" data-count-api="/users/martmwangi#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @martmwangi on GitHub">Follow @martmwangi</a>
 
 
-                </div>
-                <div class="col s4">
-                    <!--                    Google +-->
-
-<g:follow href="https://plus.google.com/martmwangi" rel="{relationshipType}"></g:follow>
-                </div>
-                <div class="col s4"></div>
-            </div>
-            </div>
-        </footer>
-
-
-</script>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
