--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <h1>Martin Mwangi</h1>
                     </div>
                     <div class="front">
-                            <h2>Front End Developer || <span class="mobile bounceInRight animated">Mobile Developer</span></h2>
+                            <h2>Front End Developer || <span class="mobile bounceInRight animated">Android Developer</span></h2>
 
                     </div>
                     <div class="na">
@@ -43,13 +43,18 @@
             <div class="container">
             <div class="row">
                 <div class="col s12">
-                    <div class="card">
-
+                    <div class="card knees">
                         <div class="card-content">
-                            <span class="card-title">Bio</span>
+                            <h3 class="center">Bio</h3>
                             Hi,call me Mart, passionate about front-end web development and<br> also very passionate
                 in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
                 swimming,tennis,<br> and wildlife. <br>
+                            <h4 class="center">Skills</h4>
+                            <div class="chip">HTML</div>
+                             <div class="chip">CSS</div>
+                             <div class="chip">JS</div>
+                             <div class="chip">Python</div>
+                             <div class="chip">Android</div>
 
                         </div>
 
