--- a/index.html
+++ b/index.html
@@ -39,30 +39,48 @@
                     </div>
                 </div>
         </div>
-        <div id="bio">
-            <div class="container">
-            <div class="row">
-                <div class="col s12">
-                    <div class="card knees">
-                        <div class="card-content">
-                            <h3 class="center">Bio</h3>
-                            Hi,call me Mart, passionate about front-end web development and<br> also very passionate
-                in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
-                swimming,tennis,<br> and wildlife. <br>
-                            <h4 class="center">Skills</h4>
-                            <div class="chip">HTML</div>
-                             <div class="chip">CSS</div>
-                             <div class="chip">JS</div>
-                             <div class="chip">Python</div>
-                             <div class="chip">Android</div>
+        <div id="Horizontal-scroll">
+            <div id="bio">
+                <div class="container">
+                <div class="row">
+                    <div class="col s12">
+                        <div class="card knees">
+                            <div class="card-content">
+                                <h3 class="center">Bio</h3>
+                                Hi,call me Mart, passionate about front-end web development and<br> also very passionate
+                    in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
+                    swimming,tennis,<br> and wildlife. <br>
+                                <h4 class="center">Skills</h4>
+                                <div class="chip">HTML</div>
+                                 <div class="chip">CSS</div>
+                                 <div class="chip">JS</div>
+                                 <div class="chip">Python</div>
+                                 <div class="chip">Android</div>
+
+                            </div>
 
                         </div>
-
+                    </div>
                     </div>
                 </div>
+            </div>
+      </div>
+        <div id="portfolio">
+
+        </div>
+<!--        Footer-->
+        <footer>
+        <div class="container">
+            <div class="row">
+            <div class="col s12"></div>
+                <div class="footer-copyright">
+                    <div class="container">
+                     <p class="center">&copy; Copyright 2016 MartMwangi</p>
+                    </div>
                 </div>
             </div>
-        </div>
+            </div>
+        </footer>
 
 
 
